--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <div class="game">
+            <div class="score">Score: <span>0</span></div>
             <div class="duck"></div>
             <div class="gun"></div>
             <div class="shot"></div>
