--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
         <div class="game">
             <div class="score">Score: <span>0</span></div>
-            <div class="duck"></div>
-            <div class="gun"></div>
-            <div class="shot"></div>
+            <div class="duck"><img src="img/pato.png" alt="Imagem de um pato"></div>
+            <div class="gun"><img src="img/arma.png" alt="Imagem de uma arma"></div>
+            <div class="shot"><img src="img/bala.png" alt="Imagem de uma bala"></div>
         </div>
     </div>
 </body>
