feats: explosion, victory screen

--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 <body>
     <div class="container">
         <div class="game">
-            <div class="score">Score: <span>0</span></div>
+            <div class="score">Score:<span>0</span></div>
             <div class="duck"><img src="img/pato.png" alt="Imagem de um pato"></div>
+            <div class="explosion"><img src="img/explosao.gif" alt="Explosão"></div>
             <div class="gun"><img src="img/arma.png" alt="Imagem de uma arma"></div>
             <div class="shot"><img src="img/bala.png" alt="Imagem de uma bala"></div>
+
+            <div class="victory">
+                <div class="victory-content">
+                    <p>Você ganhou!!!</p>
+                    <button>Jogar novamente</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
