--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 <body>
     <div class="container">
         <div class="game">
-            <div class="score">Score:<span>0</span></div>
-            <div class="duck"><img src="img/pato.png" alt="Imagem de um pato"></div>
+            <div class="header">
+                <div class="score">Pontuação:<span>0</span></div>
+                <div class="chances">Chances:<span>15</span></div>
+            </div>
+            <div class="duck"><img src="img/prof-og/prof1.png" alt="Imagem de um pato"></div>
             <div class="explosion"><img src="img/explosao.gif" alt="Explosão"></div>
-            <div class="gun"><img src="img/arma.png" alt="Imagem de uma arma"></div>
-            <div class="shot"><img src="img/bala.png" alt="Imagem de uma bala"></div>
+            <!-- <div class="gun"><img src="img/arma.png" alt="Imagem de uma arma"></div> -->
+            <div class="shot"><img src="img/dardo.png" alt="Imagem de uma bala"></div>
 
             <div class="victory">
                 <div class="victory-content">
